--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build with Maven
         run: mvn -B test
 
-  snyk-scan:
+  snyk-scan-sast:
     needs: test-with-JDK23
     runs-on: ubuntu-latest
     steps:
