--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,6 +44,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://zestful-peace-production.up/railway.app/person/'
+          target: 'https://zestful-peace-production.up.railway.app/person/'
 #          rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
