--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,17 @@
 		<java.version>23</java.version>
 	</properties>
 	<dependencies>
+		<!-- Override Logback to pick up security fixes -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.5.25</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.5.25</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
